レシピ詳細を作業中

--- a/today_menu/app/views/recipes/edit.html.erb
+++ b/today_menu/app/views/recipes/edit.html.erb
@@ -73,7 +73,7 @@
   
     <div>
       <!-- Submit button -->
-      <%= f.submit "レシピを登録する", id: 'submit-button', class: "recipe btn" %>
+      <%= f.submit "レシピを編集する", id: 'submit-button', class: "recipe btn" %>
     </div>
   <% end %>
 </main>
