--- a/konmiru_app/app/views/recipes/edit.html.erb
+++ b/konmiru_app/app/views/recipes/edit.html.erb
@@ -18,10 +18,11 @@
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to root_path, class:"header-link" do %>
+    <%= link_to index_path, class:"header-link" do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
+  </div>
 </header>
 
 
