--- a/konmiru_app/public/home/top.css
+++ b/konmiru_app/public/home/top.css
@@ -5,6 +5,7 @@ body {
   color:#444;
 }
 
+/* 全体のヘッダースタイル */
 header {
   width:100%;
   height: 70px;
@@ -12,33 +13,30 @@ header {
   border-bottom:1px solid rgb(9, 129, 9);
 }
 
+/* ヘッダー内のアクション（ロゴやキャッチコピー）を配置するコンテナ */
 .header-actions {
   height: 70px;
-  display: flex;  
-   /* 子要素間のスペースを均等にする */
-  justify-content: space-between; 
-  align-items:stretch;;  
+  display: flex;
+  align-items: center; 
+  justify-content: center; /* 子要素を中央寄せするための追加 */
   width: 100%; 
+  margin: 0 auto;
 }
 
+/* ヘッダーアクションの子要素のスタイル */
 .header-actions > * {
-  flex: 1; 
   text-align: center; 
-  border-right: 1px solid #ddd; 
-  padding: 0 2px;  
-  display: flex;           
-  justify-content: center; 
-  align-items: center;     
+  padding: 0 1px; 
+  display: flex;
+  align-items: center;
 }
 
-.header-actions > *:last-child {
-  border-right: none;  
-}
-
-/* ロゴ~ */
-.header-log{
+/* ロゴ部分のスタイル */
+.header-log {
   color:#fb914a;
   font-weight: 600;
+  display: flex;
+  align-items: center; 
 }
 
 .fa-utensils {
@@ -47,106 +45,64 @@ header {
 
 .logo-text {
   font-size:0.8em;
-}
-/* ～ロゴ */
-
-.header-link {
-  text-decoration: none;
-  display: flex;           
-  flex-direction: column;  
-  align-items: center;
+  margin-left: 10px; 
 }
 
-.link-icon {
-  color:rgb(9, 129, 9);
-  font-size:1.4em;
-}
 
-.header-link-text {
-  color:rgb(9, 129, 9);
-  font-size:0.6em;
-  font-weight: 600;
+.concept-message {
+  color:#444;
+  font-size:1.2em; 
+  font-weight: bold;
 }
-
-/* リンク全体に触れると色が変わる */
-.header-link:hover,
-.header-link:hover .link-icon,
-.header-link:hover .header-link-text {
-  color:rgb(118, 216, 118);
-}
-
-.profile-image img {
-  /* 円形は50% */
-  border-radius: 50%; 
-}
-/* ～ヘッダー */
-
 
 /* メイン部分 */
 main {
-  width:80%;
+  width:90%;
   margin:0 auto;
+}
+
+.konmiru-image {
   text-align: center;
+  margin-top: 1.5em;
 }
 
-.search-text {
-  color:#66450f;
-  font-size:0.8em;
-  font-weight:600;
-  margin-bottom:0.1em;
+.app-image {
+  width:90%;
 }
 
-/* 検索フォーム～ */
-.search-container {
-  position: relative;
-  display: inline-block;  /* サイズをコンテンツに合わせる */
+/* 使い方ガイドのスタイル */
+.usage-guide {
+  background-color: #f9f9f9;     
+  padding: 0.3em;                 
+  border-radius: 8px;                         
+  margin: 10px auto;             
 }
 
-#ingredient_name {
-  width:200px;
-  height: 25px;
-  padding-right: 30px;  
-  transition: padding-right 0.3s;  /* オプション：スムーズな変更のためのアニメーション */
-  /* z-indexを効かせるためにはpositionを指定 */
-  position: relative; 
-  z-index: 1; 
-  border: 2px solid #66450f;
-  border-radius: 3px;
+/* タイトルのスタイル */
+.usage-guide h3 {
+  text-align: center;            
+  margin: 0.3em 0em;           
+  color: rgb(9, 129, 9);                  
 }
 
-button {
-  position: absolute;
-  z-index: 2;
-  right: 2px;  
-  top: 50%;
-  transform: translateY(-50%); 
-  /* 背景を透明 */
-  background: none;  
-  /* 境界線を削除 */
-  border: none;  
-  color:#66450f;
+/* 番号付きリストのスタイル */
+.usage-guide ol {
+  list-style-type: decimal;   
+  font-size: 0.9em;              
 }
 
-.search-container:hover #ingredient_name {
-  border: 2px solid #b3863e;
+/* リストの各項目のスタイル */
+.usage-guide li {
+  margin-bottom: 10px;          
+  line-height: 1.5;            
+  color: #555;                  
 }
 
-.search-container:hover button {
-  color:#b3863e;
-}
-/* ～検索フォーム */
-
-.announce-text {
-  color:#fb914a;
-  font-size:0.8em;
-  font-weight:600;
-  margin-bottom:0.1em;
-}
 
 .btn {
   display: inline-block;
-  width: 200px; 
-  height: 40px; 
+  width: 70%; 
+  height: 3em; 
   box-shadow: 0px 2px #524b42;
   border-radius: 5px;
   position: relative;
@@ -158,62 +114,20 @@ button {
   box-shadow: none;
 }
 
-.new-registration {
-  margin-top:0.5em;
+.entrance {
+  text-align: center;
 }
 
-.registration {
+.entrance-icon {
   text-decoration: none;
-  margin-top:1em;
   color:white;
-  font-size:14px;
   font-weight: 600;
+  font-size:1em;
   background-color: #fb914a;
   text-align: center;
-  line-height:40px;
+  line-height:3em;
 }
 
-.registration:hover {
+.entrance-icon:hover {
   background-color: #f3a876;
-}
-
-/* レシピリスト一覧 */
-.recipe-container {
-  width:90%;
-  margin:0 auto;
-  padding-top:0.3em;
-  margin-top:1.2em;
-  background-color: white;
-  border: 2px solid #444;
-  border-radius: 4px;
-}
-
-.container-title{
-  margin-top: 0px;
-  color:#444;
-  font-weight: 600;
-  font-size:1.2em;
-}
-
-.recipe-link {
-  text-decoration: none;
-}
-
-.recipes {
-  border-top:1px solid #bfbebe;
-  padding:0.4em 0.1em;
-}
-
-.recipes:hover {
-  background-color: #e6e5e5;
-}
-
-.image {
-  border-radius: 0.3em;
-}
-
-.recipe-name {
-  color:#444;
-  font-size:1em;
-  font-weight:500;
 }
