フロントの画面整理

--- a/konmiru_app/app/views/users/new.html.erb
+++ b/konmiru_app/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <!-- CSSファイルの読み込み -->
-<link rel="stylesheet" href="/user/new.css">
+<link rel="stylesheet" href="/session/new.css">
 
 <!-- ヘッダー部分 -->
 <header>
