--- a/konmiru_app/app/views/users/show.html.erb
+++ b/konmiru_app/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <!-- CSSファイルの読み込み -->
-<link rel="stylesheet" href="/user/show.css">
+<link rel="stylesheet" href="/user/all.css">
 
 <!-- ヘッダー部分 -->
 <header>
