--- a/konmiru_app/public/session/new.css
+++ b/konmiru_app/public/session/new.css
@@ -11,6 +11,8 @@ header {
   background-color: white;
   width:100%;
   border-bottom:1px solid rgb(9, 129, 9);
+  display: flex;          
+  align-items: center;
 }
 
 .header-log{
@@ -27,7 +29,7 @@ header {
 
 /* メイン部分 */
 main {
-  width:60%;
+  width:80%;
   margin:0 auto;
 }
 
@@ -42,7 +44,7 @@ main {
 }
 
 .form-message {
-  font-size:0.8em;
+  font-size:0.9em;
 }
 
 .forms {
@@ -51,28 +53,29 @@ main {
 
 .form-label {
   margin-right:0.5em;
-  font-size:0.9em;
+  font-size:1em;
 }
 
 .field_with_errors {
   display: block;
-  font-size: 0.8em;
+  font-size: 1em;
   color:rgb(254, 48, 48);
 }
 
 .login-form {
-  width:200px;
-  height: 20px;
+  width:90%;
+  height: 2em;
 }
 
 .password-form {
-  width:200px;
-  height: 20px;
+  width:90%;
+  height: 2em;
 }
 
 .login {
   background-color:#fb914a;
   color:white;
+  font-size:1em;
   font-weight: 600;
   border: 1px solid #fb914a;
 }
@@ -83,8 +86,8 @@ main {
 
 .btn {
   display: inline-block;
-  width: 120px; 
-  height: 30px; 
+  width: 60%; 
+  height: 3em; 
   box-shadow: 0px 2px #524b42;
   border-radius: 5px;
   position: relative;
@@ -104,12 +107,75 @@ main {
   text-decoration: none;
   color:white;
   font-weight: 600;
-  font-size:13px;
+  font-size:1em;
   background-color: #66450f;
   text-align: center;
-  line-height:30px;
+  line-height:3em;
 }
 
 .registration:hover {
   background-color: rgb(136, 97, 41);
+}
+
+
+/* タブレット以上の画面幅 (例: 768px以上) */
+@media (min-width: 768px) {
+
+  header {
+    height: 70px;
+    line-height: 70px;
+  }
+
+  .header-log {
+    font-size: 1.2em;
+    width: 90%;
+  }
+
+  .fa-key {
+    margin-right: 1em;
+  }
+
+  main {
+    width: 90%;
+  }
+
+  .mini-message h3 {
+    margin-bottom: 0.5em;
+  }
+
+  .form-message {
+    font-size: 1em;
+  }
+
+  .form-label {
+    margin-right: 1em;
+    font-size: 1.2em;
+  }
+
+  .field_with_errors {
+    font-size: 1.1em;
+  }
+
+  .login-form, .password-form {
+    width: 95%;
+    height: 2.5em;
+  }
+
+  .login {
+    font-size: 1.2em;
+  }
+
+  .btn {
+    width: 70%;
+    height: 3.5em;
+  }
+
+  .new-registration {
+    margin-top: 1em;
+  }
+
+  .registration {
+    font-size: 1.2em;
+  }
+
 }
