--- a/konmiru_app/public/home/index.css
+++ b/konmiru_app/public/home/index.css
@@ -19,7 +19,7 @@ header {
   display: flex;  
    /* 子要素間のスペースを均等にする */
   justify-content: space-between; 
-  align-items:stretch;;  
+  align-items:stretch;
   width: 100%; 
 }
 
@@ -119,7 +119,7 @@ main {
 button {
   position: absolute;
   z-index: 2;
-  right: 2px;  
+  right: 10%;  
   top: 50%;
   transform: translateY(-50%); 
   /* 背景を透明 */
@@ -262,7 +262,7 @@ button {
   }
 
   button {
-    right: 10px;  
+    right: 15%;  
   }
 
   .search-text,
