--- a/konmiru_app/app/views/homes/index.html.erb
+++ b/konmiru_app/app/views/homes/index.html.erb
@@ -80,6 +80,4 @@
 <!-- ～メインコンテンツ -->
 
 <!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "home/index" %>
-<% end %>
+<script src="/home/index.js"></script>
