--- a/konmiru_app/app/views/recipes/new.html.erb
+++ b/konmiru_app/app/views/recipes/new.html.erb
@@ -78,10 +78,6 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "recipe/recipe_new" %>
-<% end %>
-
-
+<script src="/recipe/recipe_new.js"></script>
 
   
