--- a/konmiru_app/app/views/users/edit.html.erb
+++ b/konmiru_app/app/views/users/edit.html.erb
@@ -71,6 +71,4 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "user/user_edit" %>
-<% end %>
+<script src="/recipe/recipe_new.js"></script>
