--- a/konmiru_app/app/views/recipes/edit.html.erb
+++ b/konmiru_app/app/views/recipes/edit.html.erb
@@ -80,6 +80,4 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "recipe/recipe_edit" %>
-<% end %>
+<script src="/recipe/recipe_edit.js"></script>
