--- a/konmiru_app/app/views/users/result.html.erb
+++ b/konmiru_app/app/views/users/result.html.erb
@@ -79,6 +79,4 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "home/index" %>
-<% end %>
+<script src="/home/index.js"></script>
