Javascriptの挙動を修正中

--- a/konmiru_app/app/views/layouts/application.html.erb
+++ b/konmiru_app/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= javascript_importmap_tags %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
+    <%= yield(:js) %>
     <script src="https://kit.fontawesome.com/5967e1531b.js" crossorigin="anonymous"></script>
   </head>
 
