--- a/konmiru_app/app/views/recipes/new.html.erb
+++ b/konmiru_app/app/views/recipes/new.html.erb
@@ -78,6 +78,7 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<script src="/recipe/recipe_new.js"></script>
-
+<% content_for :js do %>
+  <%= javascript_import_module_tag "recipe/new" %>
+<% end %>
   
