--- a/konmiru_app/app/views/users/edit.html.erb
+++ b/konmiru_app/app/views/users/edit.html.erb
@@ -71,4 +71,6 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<script src="/recipe/recipe_new.js"></script>
+<% content_for :js do %>
+  <%= javascript_import_module_tag "user/user_edit" %>
+<% end %>
