--- a/konmiru_app/app/views/recipes/new.html.erb
+++ b/konmiru_app/app/views/recipes/new.html.erb
@@ -18,10 +18,11 @@
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <%= link_to index_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
+    
   
     <!-- プロフィール写真 -->
     <div class="profile-image">
@@ -81,4 +82,3 @@
 <% content_for :js do %>
   <%= javascript_import_module_tag "recipe/new" %>
 <% end %>
-  
