--- a/konmiru_app/app/views/users/all.html.erb
+++ b/konmiru_app/app/views/users/all.html.erb
@@ -18,7 +18,7 @@
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <%= link_to index_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
@@ -70,7 +70,3 @@
 </main>
 <!-- ～メインコンテンツ -->
 
-<!-- JavaScriptファイルの読み込み -->
-<% content_for :js do %>
-  <%= javascript_import_module_tag "home/index_top" %>
-<% end %>
