--- a/konmiru_app/app/views/users/edit.html.erb
+++ b/konmiru_app/app/views/users/edit.html.erb
@@ -17,8 +17,8 @@
       <div class="link-icon"><i class="fa-solid fa-users"></i></div>
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
-    <!-- プロフィール編集ページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <!-- ホームページリンク -->
+    <%= link_to index_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
