--- a/konmiru_app/app/views/users/result.html.erb
+++ b/konmiru_app/app/views/users/result.html.erb
@@ -18,7 +18,7 @@
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <%= link_to index_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
@@ -49,7 +49,7 @@
   <% end %>
   
   <!-- レシピ登録ページリンク -->
-  <div><%= link_to "レシピを追加する", new_user_recipe_path(@current_user), class: "registration btn" %></div>
+  <div><%= link_to "レシピを追加する", new_user_recipe_path(@current_user), class: "registration btn", data: { turbo: false } %></div>
 
   <!-- 検索結果のレシピ一覧 -->
   <div class="recipe-container">
@@ -79,4 +79,6 @@
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
-<script src="/home/index.js"></script>
+<% content_for :js do %>
+  <%= javascript_import_module_tag "home/index_top" %>
+<% end %>
