--- a/konmiru_app/app/views/users/show.html.erb
+++ b/konmiru_app/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <%= link_to index_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
