--- a/konmiru_app/app/views/users/result_current.html.erb
+++ b/konmiru_app/app/views/users/result_current.html.erb
@@ -72,7 +72,7 @@
         </div>
       <% end %>
     <% else %>
-    <p>該当するレシピが見つかりませんでした。</p>
+    <p class="recipe-no-result">該当するレシピが見つかりませんでした</p>
     <% end %>
   </div>
     <!-- 食材リストここまで -->
