--- a/konmiru_app/app/views/homes/index.html.erb
+++ b/konmiru_app/app/views/homes/index.html.erb
@@ -38,6 +38,11 @@
 
 <!-- メインコンテンツ～ -->
 <main>
+  <!-- フラッシュメッセージ(3通り)　-->
+  <% if flash[:delete] %>
+   <div class="flash flash-delete"><%= flash[:delete] %></div>
+  <% end %>
+
   <p class="search-text">食材を入力して登録したレシピを検索</p>
   <!-- 検索フォーム -->
   <%= form_with(url: result_current_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
