--- a/konmiru_app/app/views/users/show.html.erb
+++ b/konmiru_app/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
       <div class="header-link-text">ログアウト</div>
     <% end %>
     <!-- ユーザー一覧ページ -->
-    <%= link_to all_users_path, class:"header-link" do %>
+    <%= link_to all_users_path, class:"header-link", data: { turbo: false } do %>
       <div class="link-icon"><i class="fa-solid fa-users"></i></div>
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
