Turbo Driveの無効化を追加

--- a/konmiru_app/app/views/recipes/show.html.erb
+++ b/konmiru_app/app/views/recipes/show.html.erb
@@ -62,7 +62,7 @@
   
   <% if @current_user == @recipe.user %>
     <!-- レシピ編集ページ -->
-    <div><%= link_to "レシピを編集する", edit_user_recipe_path, class: "recipe-edit btn" %></div>
+    <div><%= link_to "レシピを編集する", edit_user_recipe_path, class: "recipe-edit btn", data: { turbo: false } %></div>
   
     <!-- レシピ削除ボタン -->
     <div>
