--- a/konmiru_app/app/views/users/new.html.erb
+++ b/konmiru_app/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <!-- 新規登録フォーム開始 -->
-  <%= form_with(url: users_path) do |f| %>
+  <%= form_with(url: users_path, data: { turbo: false }) do |f| %>
   <div class="forms">
     <div class="label-container">
       <a class="form-label">ログインID</a>
