--- a/konmiru_app/app/views/users/result_all.html.erb
+++ b/konmiru_app/app/views/users/result_all.html.erb
@@ -41,7 +41,7 @@
 
   <p class="search-text">食材を入力してみんなのレシピを検索</p>
   <!-- 検索フォーム -->
-  <%= form_with(url: result_all_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
+  <%= form_with(url: result_all_users_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
     <div class="search-container">
       <%= text_field_tag :ingredient_name, nil, id: "ingredient_name", placeholder: "食材名を入力" %>
       <%= button_tag(type: 'submit') do %>
