Turbo Driveの無効化を全体に付与

--- a/konmiru_app/app/views/homes/index.html.erb
+++ b/konmiru_app/app/views/homes/index.html.erb
@@ -13,12 +13,12 @@
       <div class="header-link-text">ログアウト</div>
     <% end %>
     <!-- ユーザー一覧ページ -->
-    <%= link_to all_users_path, class:"header-link", data: { turbo: false } do %>
+    <%= link_to all_users_path, class:"header-link" do %>
       <div class="link-icon"><i class="fa-solid fa-users"></i></div>
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- プロフィール編集ページリンク -->
-    <%= link_to edit_user_path(@current_user), class:"header-link", data: { turbo: false } do %>
+    <%= link_to edit_user_path(@current_user), class:"header-link" do %>
       <div class="link-icon"><i class="fa-solid fa-user-gear"></i></div>
       <div class="header-link-text">編集</div>
     <% end %>
@@ -59,7 +59,7 @@
 
   <p class="announce-text">レシピ登録はこちらから</p>
   <!-- レシピ登録ページリンク -->
-  <div><%= link_to "レシピを登録する", new_user_recipe_path(@current_user), class: "registration btn", data: { turbo: false } %></div>
+  <div><%= link_to "レシピを登録する", new_user_recipe_path(@current_user), class: "registration btn" %></div>
   
   <div class="recipe-container">
     <!-- ユーザーのレシピ一覧 -->
